Version 1.2.0+dev
- added missing getter and setter for BookControl::$lang

Version 1.2.0
- used message catalogue for translation by default
- changed ids in templates
- raised minimal version of PHP to 7.1

Version 1.1.1
- updated for nexendrie/translation 0.1
- code cleaning

Version 1.1.0
- added dependency on nexendrie/translation
- moved translating feature to package nexendrie/translation
- require version 2.4 of Nette packages

Version 1.0.2
- changed package's vendor

Version 1.0.1
- allowed setting custom folder for translation
- do logic of Translator::setLang() only if the language is different

Version 1.0
- added support for translations

Version 1.0-RC1
- initial version